--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,11 @@
    			<artifactId>jquery</artifactId>
    			<version>3.7.1</version>
 		</dependency>
+          
+		  <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-validation</artifactId>
+    </dependency>
 
 
 		  <dependency>
