--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,11 +4,22 @@ spring.thymeleaf.mode = HTML
 spring.thymeleaf.cach = FALSE
 
 #banco 
-# Configuração do DataSource
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST: localhost}:3306/academy
+# Configuração do DataSource online
+spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=root
 spring.datasource.password=root
-# Configuração do Hibernate
-spring.jpa.hibernate.ddl-auto=update
+spring.h2.console.enabled = true
+spring.jpa.database-platform = org.hibernate.dialect.H2Dialect
+
+
+
+#spring.datasource.url=jdbc:mysql://${MYSQL_HOST: localhost}:3306/academy
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.username=root
+#spring.datasource.password=root
+
 # Configuração da JPA
 spring.jpa.show-sql=true
+
+
+
